proton-mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__inject_style.snap
---
source: proton-mail-html-transformer/src/tests/transforms.rs
expression: html
---
<html><head>
   <style style="text/css">article,
aside,
details,
dialog,
figure,
footer,
header,
main,
menu,
nav,
section {
    display: block;
}
audio,
canvas,
progress,
video {
    display: inline-block;
}
abbr,
mark,
meter,
time,
output {
    display: inline;
}
html,
body,
blockquote,
ul,
ol,
form,
button,
figure {
    margin: 0;
    padding: 0;
}
button,
progress {
    border: 0;
}
p,
ul,
ol,
dl,
blockquote,
pre,
menu,
td,
th {
    font-size: 1em;
    line-height: 1.5;
    margin: 1.5em 0;
}
input,
select,
textarea,
optgroup,
button {
    font: inherit;
}
img,
iframe {
    vertical-align: middle;
}
ul,
ol,
menu {
    padding-inline-start: 2em;
}
dd {
    margin-inline-start: 2em;
}
b,
strong {
    font-weight: bold;
}
pre,
code,
kbd,
samp {
    font-family: SFMono-Regular, Consolas, 'Liberation Mono', 'Menlo', monospace, monospace;
    font-size: 1em;
}
pre {
    white-space: pre-wrap;
    word-wrap: break-word;
}
mark {
    background-color: #ff0;
    color: #000;
    font-weight: bold;
}
small {
    font-size: 80%;
}
a:link img,
a:visited img,
img {
    border-style: none;
}
audio:not([controls]) {
    display: none;
    block-size: 0;
}
abbr[title] {
    border-block-end: dotted 1px;
    cursor: help;
    text-decoration: none;
}
code,
pre,
samp {
    white-space: pre-wrap;
}
code {
    line-height: 1;
}
dfn {
    font-style: italic;
}
body {
    color: var(--text-norm);
    line-height: 1.25;
    font-size: 1em;
}
h1 {
    display: block;
    font-size: 2em;
    margin: 0 0 0.625em 0;
    font-weight: var(--font-weight-normal);
}
h2 {
    display: block;
    font-size: 1.5em;
    margin: 0 0 0.8333333333em 0;
    font-weight: var(--font-weight-normal);
}
h3 {
    display: block;
    font-size: 1.1875em;
    margin: 0 0 1.0526315789em 0;
    font-weight: var(--font-weight-normal);
}
h4 {
    display: block;
    font-size: 1em;
    margin: 0 0 1.25em 0;
    font-weight: var(--font-weight-normal);
}
h5 {
    display: block;
    font-size: 0.8125em;
    margin: 0 0 1.5384615385em 0;
    font-weight: var(--font-weight-normal);
}
h6 {
    display: block;
    font-size: 0.75em;
    margin: 0 0 1.6666666667em 0;
    font-weight: var(--font-weight-normal);
}
body {
    font-size: 100%;
    inline-size: 100%;
    background-color: Canvas;
    color: CanvasText;
    color-scheme: light dark;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',
        sans-serif;
    padding: 1rem;
    line-height: 1.25;
}
q {
    quotes: none;
}
q::after,
q::before {
    content: none;
}
a:focus {
    outline: dotted thin;
}
a:active,
a:hover {
    outline: 0;
}
img {
    border: 0;
    max-inline-size: 100%;
}
table img {
    max-inline-size: none;
}
blockquote {
    padding-block: 0.2em !important;
    padding-inline: 1.2em !important;
    margin: 0 !important;
    border: 3px solid var(--primary) !important;
    border-width: 0 0 0 3px !important;
}
blockquote blockquote blockquote blockquote blockquote blockquote {
    padding: 0 !important;
    border: none !important;
}
.proton-toggle-button {
  display: inline-block;
  padding-block: 0.25rem;
  padding-inline: 0.5rem;
  margin: 1em;
  margin-inline-start: 0;
  box-shadow: inset 0 0 0 1px silver;
  border: none;
  border-radius: 0.5rem;
  outline: none;
  background-color: transparent;
  text-align: center;
  transform: translateZ(0);
  transition: 0.15s cubic-bezier(0.22, 1, 0.36, 1), background-position 0s;
}
.proton-toggle-button:hover, .proton-toggle-button:focus, .proton-toggle-button:focus-within .proton-toggle-button.is-hover .proton-toggle-button:active, .proton-toggle-button.is-active, .proton-toggle-button[aria-expanded=true]:not([aria-controls]) {
  text-decoration: none;
  box-shadow: inset 0 0 0 2px silver;
  background-color: transparent;
}
@supports selector(:focus-visible) {
  .proton-toggle-button {
    outline: unset;
    }
}

[hidden] {
    display: none;
</style></head>
   <body>
   

</body></html>
